src/core/config/npo/snapshots/tailcall__core__config__npo__display__tests__nplusone_resolvers.snap
---
source: src/core/config/npo/display.rs
expression: "formatted.join(\"\\n\")"
---
query { f1 { f2 } }
